[package]
name = "breakout"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mazylol/breakout"
description = "Atari breakout with some extra fun"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
macroquad = "0.3.25"
macroquad-text = "0.1.1"
