[package]
name = "breakout-mazy"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/mazylol/breakout"
description = "Atari breakout with some extra fun"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
macroquad = "0.3.25"

[[bin]]
name = "breakout"
path = "src/main.rs"