[package]
name = "breakout"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mazylol/breakout"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
macroquad = "0.3.25"
macroquad-text = "0.1.1"

[build-dependencies]
copy_to_output = "2.0.0"
glob = "0.3"